tdf#126527 Fix widow and orphan lines being added to search

Change-Id: I36d627b64fab3d42f7cf583e6f639745527b1b7f